# Feedback-Sorter

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  test.ipynb
notebooks/: best_model.pt  data_process.ipynb  models.ipynb  torchbook.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/api/: app.py
src/data/: data.csv  loader.py  splitter.py
src/models/: base.py  catboost_model.py  linearSVC_model.py  logistic_regression_model.py  multinomialNB_model.py  pytorch_model.py  xgboost_model.py
src/training/: training_for_api.py  training_for_metrics.py
src/training/results/: model_metrics_comparison
