[project]
name = "feedback-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]
